# STAG-vykazy

./: README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/data/: uchazeci_transformed.csv
backend/models/: project.py
backend/routes/: router.py
backend/schemas/: project.py
frontend/: Dockerfile  README.md  bun.lockb  index.html  package.json  tailwind.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/graphs/: BarChart.vue
frontend/src/components/tables/: PivotTable.vue
frontend/src/router/: index.ts
frontend/src/views/: BooksView.vue  GraphView.vue  HomeView.vue  OkruhyView.vue  ProjectsView.vue
