[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.114.1"}
uvicorn = "^0.30.6"
polars = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
exclude = ["*.ipynb", "__init__.py"]
ignore = [
    "FA102",
    "D211",
    "D213",
    "COM812",
    "ISC001",
    "BLE001",
    "D203",
    "B008",
    "PLR0913",
    "FBT001",
    "N805",
    "TD002",
    "TD003",
    "FIX002",
    "DTZ005",
    "RUF013",
    "FBT002",
    "S113",
    "PLC2401",
    ]